trans link [[Khmer]] <bridge#3560485>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -3,9 +3,9 @@
 
 ===Pronunciation===
 {{wikipedia|dab=Bridge (disambiguation)|Bridge}}
-*{{IPA|/brɪdʒ/}}
-*{{audio|en-us-bridge.ogg|Audio (US)}}
-*{{rhymes|ɪdʒ}}
+* {{IPA|/brɪdʒ/}}
+* {{audio|en-us-bridge.ogg|Audio (US)}}
+* {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
 {{OE.}} ''[[brycġ]]''
@@ -36,150 +36,150 @@
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
-*{{trreq|Afrikaans}}
-*Albanian: [[urë]] {{f}}
-*Arabic: {{Arab|[[كوبري]]}} (kúbri)
-*{{trreq|Armenian}}
-*[[Basque]]: [[zubi]]
-*{{trreq|Belarusian}}
-*{{trreq|Bengali}}
-*Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
-*[[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
-*{{trreq|Bulgarian}}
-*{{trreq|Burmese}}
-*[[Catalan]]: [[pont#Catalan|pont]]
-*CJKV Characters: [[橋]]
-*Chinese: [[橋]], [[桥]] (qiáo)
-*Croatian: [[most]] {{m}}
-*Czech: [[most#Czech|most]] {{m}}
-*Danish: [[bro]] {{c}}
-*Dutch: [[brug]]
-*Esperanto: [[ponto]]
-*Estonian: [[sild]]
-*{{trreq|Faroese}}
-*Finnish: [[silta]]
-*French: [[pont]] {{m}}
-*[[Frisian]]: [[brêge]]
-*Georgian: [[ხიდი]] (xidi)
-*German: [[Brücke]] {{f}}
-*Greek: [[γέφυρα]] (yéfira)
-*{{trreq|Gujarati}}
-*{{trreq|Hawaiian}}
-*Hebrew: [[גשר]] (gesher) {{m}}
-*{{trreq|Hindi}}
-*Hungarian: [[híd]]
-*Icelandic: [[brú]] {{f}}
-*[[Ido]]: [[ponto]]
-*Indonesian: [[jembatan]]
-*Irish: [[droichead]]
-*Italian: [[ponte#Italian|ponte]] {{m}}
-*Japanese: [[橋]] ([[はし]], hashi)
-*{{trreq|Kannada}}
-*Khmer: {{KMchar|[[ស្ពាន]]}} (spīŭn)
-*Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix)
-*Kurdish:
-*:Kurmancî: [[pir]]
-*:Soranî: {{KUchar|[[پرد]]}}, (pird)
-*{{trreq|Lao}}
-*Latin: [[pons]] {{m}}
+* {{trreq|Afrikaans}}
+* Albanian: [[urë]] {{f}}
+* Arabic: {{Arab|[[كوبري]]}} (kúbri)
+* {{trreq|Armenian}}
+* [[Basque]]: [[zubi]]
+* {{trreq|Belarusian}}
+* {{trreq|Bengali}}
+* Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}} ''(arch./poetic)''
+* [[Breton]]: [[pont#Breton|pont]] {{m}}, pontoù {{p}}
+* {{trreq|Bulgarian}}
+* {{trreq|Burmese}}
+* [[Catalan]]: [[pont#Catalan|pont]]
+* CJKV Characters: [[橋]]
+* Chinese: [[橋]], [[桥]] (qiáo)
+* Croatian: [[most]] {{m}}
+* Czech: [[most#Czech|most]] {{m}}
+* Danish: [[bro]] {{c}}
+* Dutch: [[brug]]
+* Esperanto: [[ponto]]
+* Estonian: [[sild]]
+* {{trreq|Faroese}}
+* Finnish: [[silta]]
+* French: [[pont]] {{m}}
+* [[Frisian]]: [[brêge]]
+* Georgian: [[ხიდი]] (xidi)
+* German: [[Brücke]] {{f}}
+* Greek: [[γέφυρα]] (yéfira)
+* {{trreq|Gujarati}}
+* {{trreq|Hawaiian}}
+* Hebrew: [[גשר]] (gesher) {{m}}
+* {{trreq|Hindi}}
+* Hungarian: [[híd]]
+* Icelandic: [[brú]] {{f}}
+* [[Ido]]: [[ponto]]
+* Indonesian: [[jembatan]]
+* Irish: [[droichead]]
+* Italian: [[ponte#Italian|ponte]] {{m}}
+* Japanese: [[橋]] ([[はし]], hashi)
+* {{trreq|Kannada}}
+* [[Khmer]]: {{KMchar|[[ស្ពាន]]}} (spīŭn)
+* Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix)
+* Kurdish:
+*: Kurmancî: [[pir]]
+*: Soranî: {{KUchar|[[پرد]]}}, (pird)
+* {{trreq|Lao}}
+* Latin: [[pons]] {{m}}
 {{trans-mid}}
-*Latvian: [[tilts#Latvian|tilts]] {{m}}
-*Lithuanian: [[tiltas]] {{m}}
-*{{trreq|Lower Sorbian}}
-*{{trreq|Malay}}
-*[[Malayalam]]: [[പാലം]] (paalam)
-*Maltese: [[pont]] {{m}}
-*{{trreq|Maori}}
-*{{trreq|Mongolian}}
-*{{trreq|Nepali}}
-*Norwegian: [[bro]] {{m}}{{f}}, [[bru]] {{m}}{{f}}
-*[[Occitan]]: [[pònt]]
-*Old English: [[brycg]] {{f}}
-*{{trreq|Oriya}}
-*{{trreq|Persian}}
-*Polish: [[most#Polish|most]] {{m}}
-*Portuguese: [[ponte#Portuguese|ponte]] {{f}}
-*{{trreq|Punjabi}}
-*Romanian: [[pod]] [[punte]]
-*Russian: [[мост]] (most) {{m}}
-*Serbian:
-*:Cyrillic: [[мост#Serbian|мост]] {{m}}, [[ћуприја#Serbian|ћуприја]] {{f}} ''(arch./poetic)''
-*:Roman: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}} ''(arch./poetic)''
-*[[Romansch]]: [[punt]] {{m}}
-*{{trreq|Samoan}}
-*{{trreq|Sanskrit}}
-*[[Scottish Gaelic]]: [[drochaid]] {{f}}
-*{{trreq|Sinhala}}
-*Slovak: [[most#Slovak|most]] {{m}}
-*Slovene: [[most#Slovene|most]] {{m}}
-*Spanish: [[puente]] {{m}}, [[bóveda]] {{f}} (''El Salvador'')
-*{{trreq|Swahili}}
-*Swedish: [[bro#Swedish|bro]] {{c}}
-*{{trreq|Tahitian}}
-*[[Tamazight]]: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
-*{{trreq|Tamil}}
-*[[Telugu]]: [[వారధి]], [[వంతెన]], [[సేతువు]]
-*Thai: {{Thai|[[สะพาน]]}} (sàpaan)
-*{{trreq|Tongan}}
-*Turkish: [[köprü]]
-*Ukrainian: [[міст]], (mist) {{m}}, pl. мости (mostý)
-*{{trreq|Upper Sorbian}}
-*{{trreq|Urdu}}
-*Vietnamese: [[cầu]]
-*Welsh: [[pont#Welsh|pont]]
-*Yiddish: [[בריק]] (brik) {{f}}
+* Latvian: [[tilts#Latvian|tilts]] {{m}}
+* Lithuanian: [[tiltas]] {{m}}
+* {{trreq|Lower Sorbian}}
+* {{trreq|Malay}}
+* [[Malayalam]]: [[പാലം]] (paalam)
+* Maltese: [[pont]] {{m}}
+* {{trreq|Maori}}
+* {{trreq|Mongolian}}
+* {{trreq|Nepali}}
+* Norwegian: [[bro]] {{m}}{{f}}, [[bru]] {{m}}{{f}}
+* [[Occitan]]: [[pònt]]
+* Old English: [[brycg]] {{f}}
+* {{trreq|Oriya}}
+* {{trreq|Persian}}
+* Polish: [[most#Polish|most]] {{m}}
+* Portuguese: [[ponte#Portuguese|ponte]] {{f}}
+* {{trreq|Punjabi}}
+* Romanian: [[pod]] [[punte]]
+* Russian: [[мост]] (most) {{m}}
+* Serbian:
+*: Cyrillic: [[мост#Serbian|мост]] {{m}}, [[ћуприја#Serbian|ћуприја]] {{f}} ''(arch./poetic)''
+*: Roman: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}} ''(arch./poetic)''
+* [[Romansch]]: [[punt]] {{m}}
+* {{trreq|Samoan}}
+* {{trreq|Sanskrit}}
+* [[Scottish Gaelic]]: [[drochaid]] {{f}}
+* {{trreq|Sinhala}}
+* Slovak: [[most#Slovak|most]] {{m}}
+* Slovene: [[most#Slovene|most]] {{m}}
+* Spanish: [[puente]] {{m}}, [[bóveda]] {{f}} (''El Salvador'')
+* {{trreq|Swahili}}
+* Swedish: [[bro#Swedish|bro]] {{c}}
+* {{trreq|Tahitian}}
+* [[Tamazight]]: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
+* {{trreq|Tamil}}
+* [[Telugu]]: [[వారధి]], [[వంతెన]], [[సేతువు]]
+* Thai: {{Thai|[[สะพาน]]}} (sàpaan)
+* {{trreq|Tongan}}
+* Turkish: [[köprü]]
+* Ukrainian: [[міст]], (mist) {{m}}, pl. мости (mostý)
+* {{trreq|Upper Sorbian}}
+* {{trreq|Urdu}}
+* Vietnamese: [[cầu]]
+* Welsh: [[pont#Welsh|pont]]
+* Yiddish: [[בריק]] (brik) {{f}}
 {{trans-bottom}}
 
 {{trans-top|bony ridge of the nose}}
-*Danish: [[næseben]] {{n}}
-*Finnish: [[nenän selkä]]
-*Italian: [[setto]] nasale {{m}}
+* Danish: [[næseben]] {{n}}
+* Finnish: [[nenän selkä]]
+* Italian: [[setto]] nasale {{m}}
 {{trans-mid}}
-*Polish: [[grzbiet]] {{m}}
-*Russian: [[переносица]] (perenósica) {{f}}
+* Polish: [[grzbiet]] {{m}}
+* Russian: [[переносица]] (perenósica) {{f}}
 {{trans-bottom}}
 
 {{trans-top|replacement for teeth}}
-*Bosnian: [[proteza#Bosnian|proteza]] {{f}}
-*[[Catalan]]: [[pont]] {{m}}
-*Danish: [[bro]] {{c}}
-*Finnish: [[silta]], [[hammassilta]]
-*French: bridge {{m}}
-*Hungarian: [[hid#Hungarian|híd]]
-*Italian: [[ponte]] {{m}}
+* Bosnian: [[proteza#Bosnian|proteza]] {{f}}
+* [[Catalan]]: [[pont]] {{m}}
+* Danish: [[bro]] {{c}}
+* Finnish: [[silta]], [[hammassilta]]
+* French: bridge {{m}}
+* Hungarian: [[hid#Hungarian|híd]]
+* Italian: [[ponte]] {{m}}
 {{trans-mid}}
-*Polish: [[most#Polish|most]] {{m}}, [[mostek]] {{m}}
-*Russian: [[мост]] (most) {{m}}
-*Serbian:
-*:Cyrillic: [[протеза#Serbian|протеза]] {{f}}
-*:Roman: [[proteza#Serbian|proteza]] {{f}}
-*Slovene: [[mostiček]] {{m}}
-*Spanish: [[puente]] {{m}}
+* Polish: [[most#Polish|most]] {{m}}, [[mostek]] {{m}}
+* Russian: [[мост]] (most) {{m}}
+* Serbian:
+*: Cyrillic: [[протеза#Serbian|протеза]] {{f}}
+*: Roman: [[proteza#Serbian|proteza]] {{f}}
+* Slovene: [[mostiček]] {{m}}
+* Spanish: [[puente]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|nautical}}
-*Bosnian: [[kapetanski mostić#Bosnian|kapetanski mostić]] {{m}}
-*Finnish: [[komentosilta]]
-*Hungarian: [[hid#Hungarian|híd]]
-*Polish: [[mostek kapitański]] {{m}}
-*Russian: [[капитанский мостик]] (kapitánskij móstik) {{m}}
+* Bosnian: [[kapetanski mostić#Bosnian|kapetanski mostić]] {{m}}
+* Finnish: [[komentosilta]]
+* Hungarian: [[hid#Hungarian|híd]]
+* Polish: [[mostek kapitański]] {{m}}
+* Russian: [[капитанский мостик]] (kapitánskij móstik) {{m}}
 {{trans-mid}}
-*Serbian:
-*:Cyrillic: [[капетански мостић#Serbian|капетански мостић]] {{m}}
-*:Roman: [[kapetanski mostić#Serbian|kapetanski mostić]] {{m}}
-*Slovene: [[most]] {{m}}
-*Spanish: [[puente]] {{m}}
-*Swedish: [[brygga]] {{c}}
-*Yiddish: [[בריקל]] (brikl) {{n}}
+* Serbian:
+*: Cyrillic: [[капетански мостић#Serbian|капетански мостић]] {{m}}
+*: Roman: [[kapetanski mostić#Serbian|kapetanski mostić]] {{m}}
+* Slovene: [[most]] {{m}}
+* Spanish: [[puente]] {{m}}
+* Swedish: [[brygga]] {{c}}
+* Yiddish: [[בריקל]] (brikl) {{n}}
 {{trans-bottom}}
 
 {{trans-top|communications}}
-*Spanish: [[pasarela]] {{f}}
+* Spanish: [[pasarela]] {{f}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|chemistry}}
-*Russian: [[мостик]] (móstik) {{m}}
+* Russian: [[мостик]] (móstik) {{m}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -204,26 +204,26 @@
 
 =====Translations=====
 {{trans-top|card game}}
-*Bosnian: [[bridž#Bosnian|bridž]] {{m}}
-*[[Catalan]]: bridge {{m}}
-*Czech: [[bridž#Czech|bridž]] {{m}}
-*Danish: bridge
-*Dutch: bridge
-*French: [[bridge#French|bridge]] {{m}}
-*Hungarian: [[bridzs]]
-*Italian: bridge {{m}}
-*Latvian: [[bridžs]] {{m}}
+* Bosnian: [[bridž#Bosnian|bridž]] {{m}}
+* [[Catalan]]: bridge {{m}}
+* Czech: [[bridž#Czech|bridž]] {{m}}
+* Danish: bridge
+* Dutch: bridge
+* French: [[bridge#French|bridge]] {{m}}
+* Hungarian: [[bridzs]]
+* Italian: bridge {{m}}
+* Latvian: [[bridžs]] {{m}}
 {{trans-mid}}
-*Polish: [[brydż]] {{m}}
-*Russian: [[бридж]] (bridž) {{m}}
-*Serbian:
-*:Cyrillic: [[бриџ#Serbian|бриџ]] {{m}}
-*:Roman: [[bridž#Serbian|bridž]] {{m}}
-*Slovene: [[bridž]] {{m}}
-*Spanish: bridge {{m}}
-*Swedish: bridge
-*Turkish: [[köprü]]
-*Ukrainian: [[брідж]] (bridž) {{m}}
+* Polish: [[brydż]] {{m}}
+* Russian: [[бридж]] (bridž) {{m}}
+* Serbian:
+*: Cyrillic: [[бриџ#Serbian|бриџ]] {{m}}
+*: Roman: [[bridž#Serbian|bridž]] {{m}}
+* Slovene: [[bridž]] {{m}}
+* Spanish: bridge {{m}}
+* Swedish: bridge
+* Turkish: [[köprü]]
+* Ukrainian: [[брідж]] (bridž) {{m}}
 {{trans-bottom}}
 
 ===Etymology 3===
