--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -150,6 +150,7 @@ Origin uncertain.
 * German: [[weiblicher]] [[Schwan]] {{m}}, [[Schwänin]] {{f}} (archaic)
 * Norwegian: [[hunnsvane]] {{m}}
 {{trans-mid}}
+* Polish: [[łabędzica]] {{f}}
 * Russian: {{t|ru|лебёдка|f|sc=Cyrl}} (lebjódka), {{t-|ru|лебёдушка|f|sc=Cyrl}} (lebjódushka)
 * Serbian: [[labudica]]
 {{trans-bottom}}
