--- a/en/昊/昊.16946.wikitext
+++ b/en/昊/昊.16946.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6043<sub>0</sub>|canj=日一大 (AMK)}}
+
 # summer time
 # [[sky]]
 # [[heaven]]
+
 ====References====
-{{Han ref|kx=0491.070|dkj=13799|dj=0852.140|hdz=21488.080|uh=660A|ud=26122|bh=A9FE|bd=43518}}
+* {{Han ref|kx=0491.070|dkj=13799|dj=0852.140|hdz=21488.080|uh=660A|ud=26122|bh=A9FE|bd=43518}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hou6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[そら]] (sora)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[そら]] (sora)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=호|eumhun=|rv=ho|mr=ho|y=ho}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hào]] ([[hao4]])|wg=hao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昊]]
