--- a/en/坹/坹.13052.wikitext
+++ b/en/坹/坹.13052.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土十金 (GJC)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.030|dkj=04999|dj=0462.200|hdz=10435.040|uh=5779|ud=22393}}
+* {{Han ref|kx=0227.030|dkj=04999|dj=0462.200|hdz=10435.040|uh=5779|ud=22393}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けつ]] (ketsu), [[げち]] (gechi)|kun=}}
+* {{ja-readings|on=[[けつ]] (ketsu), [[げち]] (gechi)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xuè]] ([[xue4]])|wg=hsüeh<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坹]]
