--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -1,32 +1,51 @@
 {{see|恵}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=5033<sub>3</sub>|canj=十戈心 (JIP)}}
+
 # favor, benefit, confer kindness
+
 ====References====
-{{Han ref|kx=0391.190|dkj=10822|dj=0724.050|hdz=42309.100|uh=60E0|ud=24800|bh=B466|bd=46182}}
+* {{Han ref|kx=0391.190|dkj=10822|dj=0724.050|hdz=42309.100|uh=60E0|ud=24800|bh=B466|bd=46182}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wai6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei), [[え]] (e)|kun=[[めぐむ]] (megumu), [[めぐみ]] (megumi)}}
+* {{ja-readings|on=[[けい]] (kei), [[え]] (e)|kun=[[めぐむ]] (megumu), [[めぐみ]] (megumi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=혜|eumhun=|rv=hye|mr=hye|y=hyey}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[huì]] ([[hui4]])|wg=hui<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惠]]
