--- a/en/旻/旻.16931.wikitext
+++ b/en/旻/旻.16931.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6040<sub>0</sub>|canj=日卜大 (AYK)}}
+
 # [[heaven]]
+
 ====References====
-{{Han ref|kx=0490.250|dkj=13775|hdz=21495.060|uh=65FB|ud=26107|bh=CCC9|bd=52425}}
+* {{Han ref|kx=0490.250|dkj=13775|hdz=21495.060|uh=65FB|ud=26107|bh=CCC9|bd=52425}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=man4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[びん]] (bin), [[みん]] (min)|kun=[[あきぞら]] (akizora)}}
+* {{ja-readings|on=[[びん]] (bin), [[みん]] (min)|kun=[[あきぞら]] (akizora)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=민|eumhun=|rv=min|mr=min|y=min}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mín]] ([[min2]])|wg=min<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旻]]
