--- a/en/偣/偣.11123.wikitext
+++ b/en/偣/偣.11123.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2026<sub>1</sub>|canj=人卜廿日 (OYTA)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.090|dkj=00873|dj=0237.080|hdz=10194.090|uh=5063|ud=20579|bh=D460|bd=54368}}
+* {{Han ref|kx=0111.090|dkj=00873|dj=0237.080|hdz=10194.090|uh=5063|ud=20579|bh=D460|bd=54368}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えん]] (en), [[あん]] (an)|kun=[[きよい]] (kiyoi)}}
+* {{ja-readings|on=[[えん]] (en), [[あん]] (an)|kun=[[きよい]] (kiyoi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yān]] ([[yan1]])|wg=yen<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偣]]
