--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -1,35 +1,54 @@
 {{see|旣}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=71|rad=无|as=05|sn=9|four=7171<sub>4</sub>|canj=日戈一女山 (AIMVU)}}
+
 # [[already]]
 # de facto
 # [[since]]
 # [[then]]
+
 ====References====
-{{Han ref|kx=0485.310|dkj=13721|dj=0848.030|hdz=21148.010|uh=65E2|ud=26082|bh=AC4A|bd=44106}}
+* {{Han ref|kx=0485.310|dkj=13721|dj=0848.030|hdz=21148.010|uh=65E2|ud=26082|bh=AC4A|bd=44106}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gei3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=无05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
+* {{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=기|eumhun=|rv=gi|mr=ki|y=ki}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jì]] ([[ji4]])|wg=chi<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:既]]
