--- a/en/偔/偔.11108.wikitext
+++ b/en/偔/偔.11108.wikitext
@@ -1,16 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人口口尸 (ORRS)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.220|dkj=00854|dj=0236.060|hdz=10191.060|uh=5054|ud=20564}}
+* {{Han ref|kx=0110.220|dkj=00854|dj=0236.060|hdz=10191.060|uh=5054|ud=20564}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[è]] ([[e4]])|wg=o<sup>4</sup>}}
+
 # {{defn|Mandarin}}
-
-
-
 
 [[fr:偔]]
