--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日月廿 (ABT)}}
+
 # to feed a prisoner
+
 ====References====
-{{Han ref|kx=0494.090|dkj=13870|dj=0859.030|hdz=21500.090|uh=6637|ud=26167}}
+* {{Han ref|kx=0494.090|dkj=13870|dj=0859.030|hdz=21500.090|uh=6637|ud=26167}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[おん]] (on)|kun=[[めぐむ]] (megumu)}}
+* {{ja-readings|on=[[おん]] (on)|kun=[[めぐむ]] (megumu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=온|eumhun=|rv=on|mr=on|y=on}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wēn]] ([[wen1]]), [[yùn]] ([[yun4]])|wg=wen<sup>1</sup>, yün<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昷]]
