--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -146,6 +146,7 @@ From the [[Francs]], a people.
 [[Category:France|*]]
 [[Category:fr:Countries]]
 
+[[ar:France]]
 [[az:France]]
 [[zh-min-nan:France]]
 [[bg:France]]
@@ -161,6 +162,7 @@ From the [[Francs]], a people.
 [[io:France]]
 [[id:France]]
 [[it:France]]
+[[kl:France]]
 [[la:France]]
 [[lt:France]]
 [[hu:France]]
