iwiki +ar <Israel#3585022>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -152,6 +152,7 @@ Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [
 
 [[Category:sv:Countries]]
 
+[[ar:Israel]]
 [[bg:Israel]]
 [[de:Israel]]
 [[et:Israel]]
