--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -46,6 +46,11 @@
 
 {{trans-top|gradual deformation of material under stress}}
 *Finnish: [[viruminen]]
+*French: [[fluage]]
+*Dutch: [[kruip]]
+*German: [[Kriechen]]
+*Spanish: [[fluencia]]
+*Italian: [[scorrimiento]]
 {{trans-mid}}
 {{trans-bottom}}
 
