--- a/en/惣/惣.15608.wikitext
+++ b/en/惣/惣.15608.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=|canj=竹竹心 (HHP)}}
+
 # overall [questionable variant]
+
 ====References====
-{{Han ref|kx=0392.030|dkj=10829|dj=0727.070|hdz=42311.080|uh=60E3|ud=24803}}
+* {{Han ref|kx=0392.030|dkj=10829|dj=0727.070|hdz=42311.080|uh=60E3|ud=24803}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō)|kun=[[いそがしい]] (isogashii), [[そうじて]] (soujite)}}
+* {{ja-readings|on=[[そう]] (sō)|kun=[[いそがしい]] (isogashii), [[そうじて]] (soujite)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=총|eumhun=|rv=chong|mr=ch'ong|y=chong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[běi]] ([[bei3]]), [[zǒng]] ([[zong3]])|wg=pei<sup>3</sup>, tsung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惣]]
