--- a/en/慊/慊.15709.wikitext
+++ b/en/慊/慊.15709.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9803<sub>7</sub>|canj=心廿X金 (PTXC)}}
+
 # to [[resent]]
 # [[contended]]
 # [[satisfied]]
+
 ====References====
-{{Han ref|kx=0398.020|dkj=11051|dj=0737.030|hdz=42339.040|uh=614A|ud=24906|bh=DD67|bd=56679}}
+* {{Han ref|kx=0398.020|dkj=11051|dj=0737.030|hdz=42339.040|uh=614A|ud=24906|bh=DD67|bd=56679}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=him3, hip3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けん]] (ken), [[きょう]] (kyō)|kun=[[うらむ]] (uramu), [[あきたりる]] (akitariru)}}
+* {{ja-readings|on=[[けん]] (ken), [[きょう]] (kyō)|kun=[[うらむ]] (uramu), [[あきたりる]] (akitariru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[겸]], [[협]]|eumhun=|rv=gyeom, hyeop|mr=kyŏm, hyŏp|y=kyem, hyep}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qiàn]] ([[qian4]])|wg=ch'ien<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慊]]
