--- a/en/坋/坋.13006.wikitext
+++ b/en/坋/坋.13006.wikitext
@@ -1,28 +1,44 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4812<sub>7</sub>|canj=土金尸竹 (GCSH)}}
+
 # [[dust]], [[earth]]
 # a bank of earth
 # to [[dig]]
 # to bring together
+
 ====References====
-{{Han ref|kx=0225.080|dkj=04925|dj=0460.010|hdz=10424.030|uh=574B|ud=22347|bh=CAAE|bd=51886}}
+* {{Han ref|kx=0225.080|dkj=04925|dj=0460.010|hdz=10424.030|uh=574B|ud=22347|bh=CAAE|bd=51886}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ban3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ふん]] (fun), [[ほん]] (hon), [[ぼん]] (bon)|kun=[[ちり]] (chiri), [[ふりかける]] (furikakeru), [[かきまぜるつつみ]] (kakimazerutsutsumi)}}
+* {{ja-readings|on=[[ふん]] (fun), [[ほん]] (hon), [[ぼん]] (bon)|kun=[[ちり]] (chiri), [[ふりかける]] (furikakeru), [[かきまぜるつつみ]] (kakimazerutsutsumi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fèn]] ([[fen4]]), [[huài]] ([[huai4]]), [[péi]] ([[pei2]])|wg=fen<sup>4</sup>, huai<sup>4</sup>, p'ei<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坋]]
