--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -1,23 +1,34 @@
 {{see|博}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心戈月戈 (PIBI)}}
+
 # gamble, play games
 # [[wide]], [[broad]]
+
 ====References====
-{{Han ref|kx=0397.040|dkj=11028|hdz=42336.030|uh=613D|ud=24893}}
+* {{Han ref|kx=0397.040|dkj=11028|hdz=42336.030|uh=613D|ud=24893}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[はく]] (haku)|kun=[[ひろい]] (hiroi), [[ひろめる]] (hiromeru)}}
+* {{ja-readings|on=[[はく]] (haku)|kun=[[ひろい]] (hiroi), [[ひろめる]] (hiromeru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bó]] ([[bo2]])|wg=po<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愽]]
