--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -34,6 +34,7 @@ From {{L.}} {{term|lang=la|id est||that is}}.
 {{trans-mid}}
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
 * Italian: {{t+|it|cioè}}
+* Malayalam: [[അതായത്]] (athaayathu)
 * Norwegian: [[dvs.]]
 * Polish: [[tzn.]] {{i|[[to]] [[znaczy]]}}, [[tj.]] {{i|[[to]] [[jest]]}}
 * Portuguese: [[isto é]]
