--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -34,6 +34,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 *Esperanto: [[jupo]]
 *Finnish: [[hame]]
 *French: [[jupe]] {{f}}
+*Galician: [[saia]] {{f}}
 *German: [[Rock]] {{m}}
 *Greek: [[φούστα]] (fusta) {{f}}
 *Hebrew: [[חצאית]] {{f}}
