--- a/en/慃/慃.15702.wikitext
+++ b/en/慃/慃.15702.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心金戈一 (PCIM)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0397.190|dkj=11041|dj=0736.120|hdz=42338.060|uh=6143|ud=24899}}
+* {{Han ref|kx=0397.190|dkj=11041|dj=0736.120|hdz=42338.060|uh=6143|ud=24899}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǎng]] ([[yang3]])|wg=yang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慃]]
