/* Translations */ +Czech <European#3600541>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -43,6 +43,7 @@
 ====Translations====
 {{top}}
 *[[Catalan]]: [[europeu]] {{m}} [[europea]] {{f}}
+* Czech: [[Evropan]] {{m}}
 *Dutch: [[Europeaan]]
 *Esperanto: [[Eŭropano]]
 *Estonian: [[eurooplane]]
