iwiki +ar <Yugoslavia#3603662>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -49,6 +49,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 
 [[Category:Countries]]
 
+[[ar:Yugoslavia]]
 [[et:Yugoslavia]]
 [[es:Yugoslavia]]
 [[fr:Yugoslavia]]
