--- a/en/坫/坫.13038.wikitext
+++ b/en/坫/坫.13038.wikitext
@@ -1,32 +1,51 @@
 {{see|店}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4116<sub>0</sub>|canj=土卜口 (GYR)}}
+
 # a stand on which to replace goblets after drinking
+
 ====References====
-{{Han ref|kx=0226.240|dkj=04979|dj=0462.020|hdz=10430.120|uh=576B|ud=22379|bh=CBF5|bd=52213}}
+* {{Han ref|kx=0226.240|dkj=04979|dj=0462.020|hdz=10430.120|uh=576B|ud=22379|bh=CBF5|bd=52213}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=dim3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[てん]] (ten), [[ちん]] (chin)|kun=[[さかい]] (sakai)}}
+* {{ja-readings|on=[[てん]] (ten), [[ちん]] (chin)|kun=[[さかい]] (sakai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=점|rv=jeom|mr=chŏm}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[diàn]] ([[dian4]])|wg=tien<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坫]]
