--- a/en/惦/惦.15611.wikitext
+++ b/en/惦/惦.15611.wikitext
@@ -1,18 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=9006<sub>1</sub>|canj=心戈卜口 (PIYR)}}
+
 # think of, remember, miss
+
 ====References====
-{{Han ref|kx=0392.181|dkj=10847|hdz=42318.050|uh=60E6|ud=24806|bh=B17D|bd=45437}}
+* {{Han ref|kx=0392.181|dkj=10847|hdz=42318.050|uh=60E6|ud=24806|bh=B17D|bd=45437}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=dim3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[diàn]] ([[dian4]])|wg=tien<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惦]]
