template -AHD +enPR <plum#3612664>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -5,7 +5,7 @@
 
 ===Pronunciation===
 {{wikipedia}}
-* {{AHD|plŭm}}, {{IPA|/plʌm/}}, {{SAMPA|/plVm/}}
+* {{enPR|plŭm}}, {{IPA|/plʌm/}}, {{SAMPA|/plVm/}}
 * {{audio|en-us-plum.ogg|Audio (US)}}
 *: Rhymes: [[Rhymes:English:-ʌm|-ʌm]]
 *: '''Homophones''': [[plumb]]
