--- a/en/坸/坸.13051.wikitext
+++ b/en/坸/坸.13051.wikitext
@@ -1,18 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土心口 (GPR)}}
+
 # {{defn|Han|sort=土05}}
+
 ====References====
-{{Han ref|kx=0227.020|dkj=04997|dj=0462.180|hdz=10434.010|uh=5778|ud=22392}}
+* {{Han ref|kx=0227.020|dkj=04997|dj=0462.180|hdz=10434.010|uh=5778|ud=22392}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bō]] ([[bo1]]), [[gòu]] ([[gou4]])|wg=po<sup>1</sup>, kou<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坸]]
