--- a/en/慛/慛.15727.wikitext
+++ b/en/慛/慛.15727.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9201<sub>4</sub>|canj=心山人土 (PUOG), X心山人土 (XPUOG)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0399.010|dkj=11098|dj=0738.070|hdz=42346.050|uh=615B|ud=24923|bh=E1D0|bd=57808}}
+* {{Han ref|kx=0399.010|dkj=11098|dj=0738.070|hdz=42346.050|uh=615B|ud=24923|bh=E1D0|bd=57808}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cuí]] ([[cui2]])|wg=ts'ui<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慛]]
