--- a/en/垝/垝.13089.wikitext
+++ b/en/垝/垝.13089.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4711<sub>2</sub>|canj=土弓一山 (GNMU)}}
+
 # [[dilapidated]], [[ruined]]
+
 ====References====
-{{Han ref|kx=0228.100|dkj=05050|dj=0464.080|hdz=10441.020|uh=579D|ud=22429|bh=CE56|bd=52822}}
+* {{Han ref|kx=0228.100|dkj=05050|dj=0464.080|hdz=10441.020|uh=579D|ud=22429|bh=CE56|bd=52822}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gwai2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[き]] (ki)|kun=[[やぶれる]] (yabureru), [[だい]] (dai)}}
+* {{ja-readings|on=[[き]] (ki)|kun=[[やぶれる]] (yabureru), [[だい]] (dai)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[guǐ]] ([[gui3]])|wg=kuei<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垝]]
