--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-{{OE.}} {{term|brycg}}, from {{PG.}} *{{term||brugjā-}}.  Cognate with Dutch {{term|brug}}, {{term|Brücke}}.
+{{OE.}} {{term|brycg}}, from {{PG.}} *{{term||brugjā-}}.  Cognate with Dutch {{term|brug}}, German {{term|Brücke}}.
 
 ====Noun====
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
