--- a/en/愍/愍.15649.wikitext
+++ b/en/愍/愍.15649.wikitext
@@ -1,34 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=7833<sub>4</sub>|canj=口大心 (RKP)}}
+
 # [[pity]], [[sympathize with]]
+
 ====References====
-{{Han ref|kx=0394.190|dkj=10919|dj=0730.260|hdz=42325.070|uh=610D|ud=24845|bh=B75D|bd=46941}}
+* {{Han ref|kx=0394.190|dkj=10919|dj=0730.260|hdz=42325.070|uh=610D|ud=24845|bh=B75D|bd=46941}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=man5}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[びん]] (bin), [[みん]] (min)|kun=[[あわれむ]] (awaremu)}}
+* {{ja-readings|on=[[びん]] (bin), [[みん]] (min)|kun=[[あわれむ]] (awaremu)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=민|eumhun=|rv=min|mr=min|y=min}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愍]]
