--- a/en/垛/垛.13087.wikitext
+++ b/en/垛/垛.13087.wikitext
@@ -1,28 +1,43 @@
 {{see|垜}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4719<sub>4</sub>|canj=土竹弓木 (GHND)}}
+
 # [[heap]], [[pile]]
 # pile up, heap up
+
 ====References====
-{{Han ref|kx=0228.080|dkj=05048|dj=0464.060|hdz=10440.080|uh=579B|ud=22427|bh=CE57|bd=52823}}
+* {{Han ref|kx=0228.080|dkj=05048|dj=0464.060|hdz=10440.080|uh=579B|ud=22427|bh=CE57|bd=52823}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=do2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[だ]] (da)|kun=}}
+* {{ja-readings|on=[[だ]] (da)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[duǒ]] ([[duo3]])|wg=to<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垛]]
