--- a/en/愄/愄.15640.wikitext
+++ b/en/愄/愄.15640.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9603<sub>2</sub>|canj=心田一女 (PWMV)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0393.270|dkj=10892|dj=0730.040|hdz=42328.050|uh=6104|ud=24836|bh=D94F|bd=55631}}
+* {{Han ref|kx=0393.270|dkj=10892|dj=0730.040|hdz=42328.050|uh=6104|ud=24836|bh=D94F|bd=55631}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tōu]] ([[tou1]]), [[wēi]] ([[wei1]])|wg=t'ou<sup>1</sup>, wei<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愄]]
