template -AHD +enPR <creep#3619016>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -4,10 +4,10 @@
 {{OE.}} ''[[crēopan]]''
 
 ===Pronunciation===
-* {{AHD|/krēp/}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
-*{{audio|en-us-creep.ogg|Audio (US)}}
+* {{enPR|/krēp/}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
+* {{audio|en-us-creep.ogg|Audio (US)}}
 
-*Rhymes: [[Rhymes:English:-iːp|-iːp]]
+* Rhymes: [[Rhymes:English:-iːp|-iːp]]
 
 ===Noun===
 {{en-noun}}
@@ -24,19 +24,19 @@
 
 ====Translations====
 {{trans-top|movement of something that creeps}}
-*Dutch: [[kruip]] {{m}}
-*Finnish: [[ryömintä]], [[matelu]]
+* Dutch: [[kruip]] {{m}}
+* Finnish: [[ryömintä]], [[matelu]]
 {{trans-mid}}
-*Italian: [[strisciare]] {{m}}
+* Italian: [[strisciare]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|small gradual change in a measure}}
-*Finnish: [[ryömintä]]
+* Finnish: [[ryömintä]]
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|slight displacement}}
-*Finnish: [[liikahdus]]
+* Finnish: [[liikahdus]]
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -45,7 +45,7 @@
 {{trans-bottom}}
 
 {{trans-top|gradual deformation of material under stress}}
-*Finnish: [[viruminen]]
+* Finnish: [[viruminen]]
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -54,15 +54,15 @@
 {{trans-bottom}}
 
 {{trans-top|informal: an annoyingly unpleasant person}}
-*Dutch: [[griezel]] {{m}}, [[engerd]] {{m}}
-*Finnish: [[nilkki]]
-*German: [[Knilch]] {{m}}
-*Italian: [[antipatico]] {{m}}
+* Dutch: [[griezel]] {{m}}, [[engerd]] {{m}}
+* Finnish: [[nilkki]]
+* German: [[Knilch]] {{m}}
+* Italian: [[antipatico]] {{m}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|frightening or disconcerting person}}
-*Finnish: [[kyylä]], [[hyypiö]]
+* Finnish: [[kyylä]], [[hyypiö]]
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -78,70 +78,70 @@
 #: ''Prices have been '''creeping''' up all year.''
 
 ====Synonyms====
-*{{i-c|move slowly with the abdomen close to the ground}} [[crawl]]
-*{{i-c|grow across a surface rather than upwards}}
-*{{i-c|move slowly and quietly in a particular direction}}
-*{{i-c|make small gradual changes}}
+* {{i-c|move slowly with the abdomen close to the ground}} [[crawl]]
+* {{i-c|grow across a surface rather than upwards}}
+* {{i-c|move slowly and quietly in a particular direction}}
+* {{i-c|make small gradual changes}}
 
 ====Translations====
 {{trans-top|move slowly with the abdomen close to the ground}}
-*[[Catalan]]: [[arrossegar-se]]
-*Czech: plazit se
-*Dutch: [[kruipen]]
-*Danish: [[krybe]]
-*Esperanto: [[rampi]]
-*Finnish: [[ryömiä]], [[madella]]
-*French: ramper
-*German: [[kriechen]]
+* [[Catalan]]: [[arrossegar-se]]
+* Czech: plazit se
+* Dutch: [[kruipen]]
+* Danish: [[krybe]]
+* Esperanto: [[rampi]]
+* Finnish: [[ryömiä]], [[madella]]
+* French: ramper
+* German: [[kriechen]]
 {{trans-mid}}
-*Italian: [[strisciare]]
-*Japanese: [[這う]] (hau)
-*Portuguese: [[rastejar]]
-*Russian: [[ползти]]
-*Spanish: [[arrastrarse]], [[reptar]]
-*Swedish: [[krypa]], [[kräla]]
+* Italian: [[strisciare]]
+* Japanese: [[這う]] (hau)
+* Portuguese: [[rastejar]]
+* Russian: [[ползти]]
+* Spanish: [[arrastrarse]], [[reptar]]
+* Swedish: [[krypa]], [[kräla]]
 {{trans-bottom}}
 
 {{trans-top|grow across a surface rather than upwards}}
-*Danish: [[krybe]]
-*Dutch: [[kruipen]]
-*Finnish: [[ryömiä]]
-*German: [[kriechen]]
+* Danish: [[krybe]]
+* Dutch: [[kruipen]]
+* Finnish: [[ryömiä]]
+* German: [[kriechen]]
 {{trans-mid}}
-*Japanese: [[這う]] (hau), [[伝う]] (tsutau)
-*Russian: [[стелиться]]
-*Swedish: [[klänga]]
+* Japanese: [[這う]] (hau), [[伝う]] (tsutau)
+* Russian: [[стелиться]]
+* Swedish: [[klänga]]
 {{trans-bottom}}
 
 {{trans-top|move slowly and quietly in a particular direction}}
-*Danish: [[krybe]], [[liste]]
-*Dutch: [[kruipen]]
-*Finnish: [[hiipiä]]
-*German: [[schleichen]]
+* Danish: [[krybe]], [[liste]]
+* Dutch: [[kruipen]]
+* Finnish: [[hiipiä]]
+* German: [[schleichen]]
 {{trans-mid}}
-*Japanese: [[忍び寄る]] (shinobi-yoru)
-*Russian: [[стелиться]]
-*Swedish: [[smyga]]
+* Japanese: [[忍び寄る]] (shinobi-yoru)
+* Russian: [[стелиться]]
+* Swedish: [[smyga]]
 {{trans-bottom}}
 
 {{trans-top|change or deviate gradually}}
-*Finnish: [[hiipiä]]
-*Dutch: [[opschuiven]]
-*German: [[schleichen]]
+* Finnish: [[hiipiä]]
+* Dutch: [[opschuiven]]
+* German: [[schleichen]]
 {{trans-mid}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
-*{{ttbc|Frisian}}: [[krûpe]]
+* {{ttbc|Frisian}}: [[krûpe]]
 
 ====Derived terms====
-*[[creep up on]]
-*[[creepy]]
-*[[decrepit]]
-*[[function creep]]
-*[[give someone the creeps]]
-*[[creep someone out]]
+* [[creep up on]]
+* [[creepy]]
+* [[decrepit]]
+* [[function creep]]
+* [[give someone the creeps]]
+* [[creep someone out]]
 
 [[Category:English irregular verbs]]
 
