--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -1,27 +1,42 @@
 {{see|偷}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人人一女 (OOMV)}}
+
 # to steal
+
 ====References====
-{{Han ref|kx=0112.071|dkj=00901|hdz=10193.021|uh=5078|ud=20600}}
+* {{Han ref|kx=0112.071|dkj=00901|hdz=10193.021|uh=5078|ud=20600}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ちゅう]] (chū), [[とう]] (tō)|kun=[[ぬすむ]] (nusumu)}}
+* {{ja-readings|on=[[ちゅう]] (chū), [[とう]] (tō)|kun=[[ぬすむ]] (nusumu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=투|rv=tu|mr=t'u}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偸]]
