--- a/en/慐/慐.15716.wikitext
+++ b/en/慐/慐.15716.wikitext
@@ -1,8 +1,11 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=一月金心 (MBCP)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0398.261|hdz=42333.021|uh=6150|ud=24912}}
+* {{Han ref|kx=0398.261|hdz=42333.021|uh=6150|ud=24912}}
 
 [[fr:慐]]
