--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -1,32 +1,51 @@
 {{see|垠}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4212<sub>1</sub>|canj=土竹一中 (GHML)}}
+
 # [[border]], [[boundary]]
+
 ====References====
-{{Han ref|kx=0224.190|dkj=04903|dj=0459.070|hdz=10423.070|uh=573B|ud=22331|bh=A7A6|bd=42918}}
+* {{Han ref|kx=0224.190|dkj=04903|dj=0459.070|hdz=10423.070|uh=573B|ud=22331|bh=A7A6|bd=42918}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=kei4, ngan4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[き]] (ki), [[ぎん]] (gin)|kun=[[さかい]] (sakai)}}
+* {{ja-readings|on=[[き]] (ki), [[ぎん]] (gin)|kun=[[さかい]] (sakai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[기]], [[은]]|rv=gi, eun|mr=ki, ŭn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qí]] ([[qi2]]), [[yín]] ([[yin2]])|wg=ch'i<sup>2</sup>, yin<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圻]]
