--- a/en/惭/惭.15618.wikitext
+++ b/en/惭/惭.15618.wikitext
@@ -1,21 +1,31 @@
 {{see|慚}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心大手中 (PKQL)}}
+
 # [[ashamed]], [[humiliated]]
 # [[shameful]]
+
 ====References====
-{{Han ref|kx=0392.181|hdz=42314.110|uh=60ED|ud=24813}}
+* {{Han ref|kx=0392.181|hdz=42314.110|uh=60ED|ud=24813}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chaam4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=慚|pin=[[cán]] ([[can2]])|wg=ts'an<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惭]]
