--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -1,33 +1,52 @@
 {{see|伦|倫}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2822<sub>7</sub>|canj=人人一月 (OOMB)}}
+
 # normal human [[relationships]]
 # [[ethics]]
+
 ====References====
-{{Han ref|kx=0109.030|dkj=00793|dj=0232.010|hdz=10181.010|uh=502B|ud=20523|bh=ADDB|bd=44507}}
+* {{Han ref|kx=0109.030|dkj=00793|dj=0232.010|hdz=10181.010|uh=502B|ud=20523|bh=ADDB|bd=44507}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=[[leun4]]}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
+* {{ja-readings|on=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=륜|rv=ryun|mr=ryun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=伦|pin=[[lún]] ([[lun2]]), [[wō]] ([[wo1]]), [[wǒ]] ([[wo3]])|wg=[[lun2|lun<sup>2</sup>]], [[wo1|wo<sup>1</sup>]], [[wo3|wo<sup>3</sup>]]}}
+
 # {{defn|Mandarin}}
 
 [[fr:倫]]
