--- a/en/偟/偟.11119.wikitext
+++ b/en/偟/偟.11119.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2621<sub>4</sub>|canj=人竹日土 (OHAG)}}
+
 # agitated
 # alarmed
+
 ====References====
-{{Han ref|kx=0111.040|dkj=00868|dj=0237.040|hdz=10192.070|uh=505F|ud=20575|bh=D45D|bd=54365}}
+* {{Han ref|kx=0111.040|dkj=00868|dj=0237.040|hdz=10192.070|uh=505F|ud=20575|bh=D45D|bd=54365}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wong4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō), [[おう]] (ō)|kun=[[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)}}
+* {{ja-readings|on=[[こう]] (kō), [[おう]] (ō)|kun=[[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=황|rv=hwang|mr=hwang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[huáng]] ([[huang2]])|wg=huang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偟]]
