--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -47,7 +47,7 @@
 * Italian: {{t+|it|mattone}}
 {{trans-mid}}
 * Japanese: [[煉瓦]] ([[れんが]] renga)
-* Latin: [[later]] {{m}}
+* Latin: [[later#Latin|later]] {{m}}
 * Latvian: [[ķieģelis]] {{m}}
 * Lithuanian: [[plyta]]
 * Norwegian: [[murstein]]
