--- a/en/偑/偑.11105.wikitext
+++ b/en/偑/偑.11105.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2721<sub>0</sub>|canj=人竹弓戈 (OHNI)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.190|dkj=00851|dj=0236.030|hdz=10194.020|uh=5051|ud=20561|bh=D467|bd=54375}}
+* {{Han ref|kx=0110.190|dkj=00851|dj=0236.030|hdz=10194.020|uh=5051|ud=20561|bh=D467|bd=54375}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ふう]] (hū), [[ふ]] (fu)|kun=}}
+* {{ja-readings|on=[[ふう]] (hū), [[ふ]] (fu)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fēng]] ([[feng1]])|wg=feng<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偑]]
