--- a/en/偰/偰.11136.wikitext
+++ b/en/偰/偰.11136.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2723<sub>4</sub>|canj=人手竹大 (OQHK)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.290|dkj=00893|dj=0238.030|hdz=10186.070|uh=5070|ud=20592|bh=D44C|bd=54348}}
+* {{Han ref|kx=0111.290|dkj=00893|dj=0238.030|hdz=10186.070|uh=5070|ud=20592|bh=D44C|bd=54348}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sit3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[せつ]] (setsu), [[せち]] (sechi)|kun=[[きよい]] (kiyoi)}}
+* {{ja-readings|on=[[せつ]] (setsu), [[せち]] (sechi)|kun=[[きよい]] (kiyoi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=설|rv=seol|mr=sŏl}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xiè]] ([[xie4]])|wg=hsieh<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偰]]
