--- a/en/昑/昑.16953.wikitext
+++ b/en/昑/昑.16953.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6802<sub>7</sub>|canj=日人戈弓 (AOIN)}}
+
 # [[bright]]
+
 ====References====
-{{Han ref|kx=0491.210|dkj=13811|dj=0854.050|hdz=21491.040|uh=6611|ud=26129|bh=CCCF|bd=52431}}
+* {{Han ref|kx=0491.210|dkj=13811|dj=0854.050|hdz=21491.040|uh=6611|ud=26129|bh=CCCF|bd=52431}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[きん]] (kin)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[きん]] (kin)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=금|eumhun=|rv=geum|mr=kŭm|y=kum}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qǐn]] ([[qin3]])|wg=ch'in<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昑]]
