--- a/en/旼/旼.16932.wikitext
+++ b/en/旼/旼.16932.wikitext
@@ -1,20 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6004<sub>0</sub>|canj=日卜大 (AYK), X日卜大 (XAYK)}}
+
 # [[gentle]] and [[affable]]
+
 ====References====
-{{Han ref|kx=0490.260|dkj=13776|dj=0851.250|hdz=21495.050|uh=65FC|ud=26108|bh=CCC5|bd=52421}}
+* {{Han ref|kx=0490.260|dkj=13776|dj=0851.250|hdz=21495.050|uh=65FC|ud=26108|bh=CCC5|bd=52421}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[민]]|eumhun=|rv=min|mr=min|y=min}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mín]] ([[min2]])|wg=min<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旼]]
