--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -13,10 +13,10 @@ From the {{Pers.}} {{FAchar|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''
 
 ===Noun===
 {{wikipedia}}
-'''pajamas''' ''plural''
+{{en-noun|-}} {{pluralonly}}
 
-# (US) [[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
-# loose-fitting [[trousers]] worn in the [[Far East]] by both sexes
+# {{US}} [[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
+# Loose-fitting [[trousers]] worn in the [[Far East]] by both sexes.
 
 ====Translations====
 {{trans-top|clothes for wearing to bed and sleeping in}}
@@ -57,7 +57,6 @@ From the {{Pers.}} {{FAchar|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''
 
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
 
-[[Category:English pluralia tantum]]
 [[Category:Hindi derivations]]
 [[Category:Persian derivations]]
 [[Category:Urdu derivations]]
