--- a/en/傎/傎.11166.wikitext
+++ b/en/傎/傎.11166.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2428<sub>1</sub>|canj=人十月金 (OJBC)}}
+
 # [[topple]]
+
 ====References====
-{{Han ref|kx=0113.050|dkj=00951|dj=0240.150|hdz=10201.010|uh=508E|ud=20622|bh=D859|bd=55385}}
+* {{Han ref|kx=0113.050|dkj=00951|dj=0240.150|hdz=10201.010|uh=508E|ud=20622|bh=D859|bd=55385}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=din1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[てん]] (ten)|kun=[[さかさま]] (sakasama), [[くるう]] (kuruu)}}
+* {{ja-readings|on=[[てん]] (ten)|kun=[[さかさま]] (sakasama), [[くるう]] (kuruu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[전]]|rv=jeon|mr=chŏn}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[diān]] ([[dian1]]), [[xí]] ([[xi2]]), [[xì]] ([[xi4]])|wg=tien<sup>1</sup>, hsi<sup>2</sup>, hsi<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傎]]
