--- a/en/垌/垌.13071.wikitext
+++ b/en/垌/垌.13071.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4712<sub>0</sub>|canj=土月一口 (GBMR)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.300|dkj=05031|dj=0463.190|hdz=10439.030|uh=578C|ud=22412|bh=CE54|bd=52820}}
+* {{Han ref|kx=0227.300|dkj=05031|dj=0463.190|hdz=10439.030|uh=578C|ud=22412|bh=CE54|bd=52820}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=dung6, tung6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とう]] (tō), [[つ]] (tsu)|kun=[[つぼ]] (tsubo)}}
+* {{ja-readings|on=[[とう]] (tō), [[つ]] (tsu)|kun=[[つぼ]] (tsubo)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=동|rv=dong|mr=tong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dòng]] ([[dong4]])|wg=tung<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垌]]
