* before Han ref, * before ja-readings <昮#3643393>

--- a/en/昮/昮.16982.wikitext
+++ b/en/昮/昮.16982.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6012<sub>7</sub>|canj=日一大尸 (AMKS)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0493.230|dkj=13856|dj=0858.030|hdz=21499.010|uh=662E|ud=26158|bh=CEF8|bd=52984}}
+* {{Han ref|kx=0493.230|dkj=13856|dj=0858.030|hdz=21499.010|uh=662E|ud=26158|bh=CEF8|bd=52984}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō), [[じゅ]] (ju)|kun=}}
+* {{ja-readings|on=[[しょう]] (shō), [[じゅ]] (ju)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zòng]] ([[zong4]])|wg=tsung<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昮]]
