--- a/en/偕/偕.11109.wikitext
+++ b/en/偕/偕.11109.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2126<sub>1</sub>|canj=人心心日 (OPPA)}}
+
 # [[together]]
 # be [[in order]]
+
 ====References====
-{{Han ref|kx=0110.230|dkj=00855|dj=0236.070|hdz=10188.120|uh=5055|ud=20565|bh=B0BA|bd=45242}}
+* {{Han ref|kx=0110.230|dkj=00855|dj=0236.070|hdz=10188.120|uh=5055|ud=20565|bh=B0BA|bd=45242}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gaai1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かい]] (kai)|kun=[[ともに]] (tomoni)}}
+* {{ja-readings|on=[[かい]] (kai)|kun=[[ともに]] (tomoni)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[해]], [[혜]]|rv=hae, hye|mr=hae, hye}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偕]]
