--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,8 +13,8 @@
 ===Adjective===
 {{en-adj}}
 
-# possessing charm and attractive.
-#: ''Anyone who has ever met Bobbi thought she was absolutely '''Beautiful'''.''
+# Ananya Poppy Reynolds
+#: 
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #: ''The skater performed a beautiful [[axel]].''
