--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -1,26 +1,39 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=4460<sub>1</sub>|canj=廿日 (TA)}}
+
 # [[formerly]]
 # [[ancient]]
 # in beginning
+
 ====References====
-{{Han ref|kx=0492.050|dkj=13816|dj=0855.020|hdz=21488.110|uh=6614|ud=26132|bh=A9F5|bd=43509}}
+* {{Han ref|kx=0492.050|dkj=13816|dj=0855.020|hdz=21488.110|uh=6614|ud=26132|bh=A9F5|bd=43509}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sik1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=3|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[せき]] (seki), [[しゃく]] (shaku)|kun=[[むかし]] (mukashi)}}
+* {{ja-readings|on=[[せき]] (seki), [[しゃく]] (shaku)|kun=[[むかし]] (mukashi)}}
 
 ===Noun===
 {{ja-noun|k|hira=むかし|rom=mukashi}}
+
 # the [[past]], [[old]] times
 #* 昔と[[今]] past and the present
 #* 昔の[[自分]] my past self
@@ -32,18 +45,26 @@
 
 ===Adverb===
 {{ja-pos|k|adverb|hira=むかし|rom=mukashi}}
+
 # [[once]]
 #* 昔[[見る|見た]][[映画]] a movie I once saw
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[석]], [[착]]|eumhun=|rv=seok, chak|mr=sŏk, ch'ak|y=sek, chak}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xí]] ([[xi2]])|wg=hsi<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昔]]
