--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -315,6 +315,7 @@
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
+[[Category:English verbs which are their own past participle]]
 [[Category:English past participles]]
 [[Category:English simple past forms]]
 [[Category:Meats]]
