--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4012<sub>7</sub>|canj=土卜竹尸 (GYHS)}}
+
 # [[neighborhood]], urban [[subdivision]]
+
 ====References====
-{{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A|ud=22346|bh=A77B|bd=42875}}
+* {{Han ref|kx=0225.070|dkj=04924|dj=0459.270|hdz=10427.010|uh=574A|ud=22346|bh=A77B|bd=42875}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=fong1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぼう]] (bō)|kun=[[まち]] (machi), [[へや]] (heya), [[てら]] (tera)}}
+* {{ja-readings|on=[[ぼう]] (bō)|kun=[[まち]] (machi), [[へや]] (heya), [[てら]] (tera)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[방]]|rv=bang|mr=pang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fāng]] ([[fang1]])|wg=fang<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坊]]
