--- a/en/圼/圼.12991.wikitext
+++ b/en/圼/圼.12991.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=日土 (AG)}}
+
 # {{defn|Han|sort=土04}}
+
 ====References====
-{{Han ref|kx=0224.200|dkj=04904|dj=0459.080|hdz=10422.160|uh=573C|ud=22332}}
+* {{Han ref|kx=0224.200|dkj=04904|dj=0459.080|hdz=10422.160|uh=573C|ud=22332}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jī]] ([[ji1]]), [[niè]] ([[nie4]])|wg=chi<sup>1</sup>, nieh<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圼]]
