--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -65,7 +65,7 @@
 *Portuguese: [[Alemanha]] {{f}}
 *Romanian: [[Germania]] {{f}}
 *Russian: [[Германия]] (Germánija) {{f}}
-*[[Scottish Gaelic]]: [[A' Ghearmailt]] {{f}}
+*[[Scottish Gaelic]]: A' [[Gearmailt|Ghearmailt]] {{f}}
 *Serbian:
 *:Cyrillic: [[Немачка]] {{f}}
 *:Roman: [[Nemačka]] {{f}}
