* before Han ref <垆#3650746>

--- a/en/垆/垆.13065.wikitext
+++ b/en/垆/垆.13065.wikitext
@@ -1,21 +1,31 @@
 {{see|壚}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土卜尸 (GYS)}}
+
 # black clods of earth
 # [[shop]], [[hut]]
+
 ====References====
-{{Han ref|kx=0227.271|hdz=10431.010|uh=5786|ud=22406}}
+* {{Han ref|kx=0227.271|hdz=10431.010|uh=5786|ud=22406}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=lou4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=壚|pin=[[lú]] ([[lu2]])|wg=lu<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垆]]
