--- a/en/惤/惤.15609.wikitext
+++ b/en/惤/惤.15609.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=9003<sub>2</sub>|canj=心弓卜戈 (PNYI)}}
+
 # {{defn|Han|sort=心08}}
+
 ====References====
-{{Han ref|kx=0392.090|dkj=10754|hdz=42319.100|uh=60E4|ud=24804|bh=D55A|bd=54618}}
+* {{Han ref|kx=0392.090|dkj=10754|hdz=42319.100|uh=60E4|ud=24804|bh=D55A|bd=54618}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiān]] ([[jian1]])|wg=chien<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惤]]
