* before Han ref, * before ja-readings <惨#3662047>

--- a/en/惨/惨.15613.wikitext
+++ b/en/惨/惨.15613.wikitext
@@ -1,33 +1,52 @@
 {{see|慘}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心戈大竹 (PIKH)}}
+
 # [[sad]], [[pitiful]], [[wretched]]
 # [[cruel]]
+
 ====References====
-{{Han ref|kx=0392.181|dkj=10850|dj=0728.030|hdz=42320.010|uh=60E8|ud=24808}}
+* {{Han ref|kx=0392.181|dkj=10850|dj=0728.030|hdz=42320.010|uh=60E8|ud=24808}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chaam2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[さん]] (san), [[ざん]] (zan)|kun=[[みじめ]] (mijime), [[いたむ]] (itamu)}}
+* {{ja-readings|on=[[さん]] (san), [[ざん]] (zan)|kun=[[みじめ]] (mijime), [[いたむ]] (itamu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[참]], [[침]]|eumhun=|rv=cham, chim|mr=ch'am, ch'im|y=cham, chim}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=慘|pin=[[cǎn]] ([[can3]])|wg=ts'an<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惨]]
