--- a/en/偅/偅.11092.wikitext
+++ b/en/偅/偅.11092.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2221<sub>4</sub>|canj=人竹十土 (OHJG)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.240|dkj=00832|dj=0233.130|hdz=10192.030|uh=5045|ud=20549|bh=D45C|bd=54364}}
+* {{Han ref|kx=0109.240|dkj=00832|dj=0233.130|hdz=10192.030|uh=5045|ud=20549|bh=D45C|bd=54364}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jung2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō), [[しゅ]] (shu), [[とう]] (tō)|kun=[[こども]] (kodomo)}}
+* {{ja-readings|on=[[しょう]] (shō), [[しゅ]] (shu), [[とう]] (tō)|kun=[[こども]] (kodomo)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=동|rv=dong|mr=tong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhòng]] ([[zhong4]])|wg=chung<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偅]]
