--- a/en/昫/昫.16979.wikitext
+++ b/en/昫/昫.16979.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6702<sub>0</sub>|canj=日心口 (APR)}}
+
 # [[warm]]
+
 ====References====
-{{Han ref|kx=0493.190|dkj=13852|dj=0857.070|hdz=21502.090|uh=662B|ud=26155|bh=CEF3|bd=52979}}
+* {{Han ref|kx=0493.190|dkj=13852|dj=0857.070|hdz=21502.090|uh=662B|ud=26155|bh=CEF3|bd=52979}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=heui2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[く]] (ku), [[きょう]] (kyō)|kun=[[あたたか]] (atataka)}}
+* {{ja-readings|on=[[く]] (ku), [[きょう]] (kyō)|kun=[[あたたか]] (atataka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=구|eumhun=|rv=gu|mr=ku|y=kwu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xǔ]] ([[xu3]])|wg=hsü<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昫]]
