/* Intransitive verb */ heading +1 for section editing <curve#3669839>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -134,11 +134,11 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 {{trans-bottom}}
 
-===Intransitive verb===
+====Intransitive verb====
 {{en-verb|curv|ing}}
 
-# To bend or turn gradually from a given direction.
-#: ''the road curves to the right''
+# {{intransitive}} To bend or turn gradually from a given direction.
+#: ''the road '''curves''' to the right''
 
 ====Translations====
 
