--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -69,6 +69,7 @@ From {{OF.}} ''[[conte]]''
 
 {{trans-top|A charge of misconduct (4)}}
 *Finnish: [[syyte]], [[syytekohta]]
+*Spanish: [[punto]] {{m}}, [[cargo]] {{m}}
 {{trans-bottom}}
 
 ======Translations to be checked======
