--- a/en/慔/慔.15720.wikitext
+++ b/en/慔/慔.15720.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9403<sub>4</sub>|canj=心廿日大 (PTAK)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0398.310|dkj=11086|dj=0737.250|hdz=42344.130|uh=6154|ud=24916|bh=E1CE|bd=57806}}
+* {{Han ref|kx=0398.310|dkj=11086|dj=0737.250|hdz=42344.130|uh=6154|ud=24916|bh=E1CE|bd=57806}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mò]] ([[mo4]])|wg=mo<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慔]]
