/* Japanese */ +pos, update readings <旧#3678220>

--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -22,14 +22,24 @@
 ----
 
 ==Japanese==
-
+===Noun===
+{{ja-noun|k|hira=きゅう|rom=kyū}}
+# [[old]] things, original state, former state, old times
+# the old calendar based on a lunar system
+{{ja-noun|k|hira=ふる|rom=furu}}
+# [[used]] item, [[secondhand]] item
+===Prefix===
+{{ja-pos|k|prefix|hira=きゅう|rom=kyū}}
+# [[ex-]]
+{{ja-pos|k|prefix|hira=ふる|rom=furu}}
+# [[old]], [[used]], [[previous]]
 ===Kanji===
 {{ja-kanji|grade=5|rs=日01}}
 
 # {{defn|Japanese}}
 
 ====Readings====
-* {{ja-readings|on=[[きゅう]] (kyū), [[ぐ]] (gu)|kun=[[ふるい]] (furui), [[もと]] (moto)}}
+* {{ja-readings|on=[[きゅう]] (''kyū'')|kun=[[ふるい]] ([[旧い]], ''furui''), [[もと]] (''moto'')}}
 
 ----
 
