/* Translations */ Added Greek translation, equalised mid-line <Yugoslavia#3680438>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -24,11 +24,12 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 *Finnish: [[Jugoslavia]]
 *French: [[Yougoslavie]] {{f}}
 *German: [[Jugoslavien]] {{n}}
+*Greek: [[Γιουγκοσλαβία]] (Yiougkoslavía) {{f}}
 *Hungarian: [[Jugoszlávia]]
 *Italian: [[Jugoslavia]], [[Iugoslavia]] {{f}}
+{{mid}}
 *Japanese: [[ユーゴスラヴィア]] (Yūgosuravia)
 *Korean: [[유고슬라비아]] (Yugoseullabia)
-{{mid}}
 *Maltese: il-[[Jugoslavja]]
 *Polish: [[Jugosławia]] {{f}}
 *Portuguese: [[Jugoslávia]] ''(Portugual)'' {{f}}, [[Iogoslávia]] ''(Brazil)'' {{f}}
