* before Han ref, * before ja-readings <惥#3689648>

--- a/en/惥/惥.15610.wikitext
+++ b/en/惥/惥.15610.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=|canj=竹人心 (HOP), XX竹人心 (XXHOP)}}
+
 # {{defn|Han|sort=心08}}
+
 ====References====
-{{Han ref|kx=0396.071|dkj=10846|hdz=42322.090|uh=60E5|ud=24805}}
+* {{Han ref|kx=0396.071|dkj=10846|hdz=42322.090|uh=60E5|ud=24805}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心08}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō)|kun=[[すすめる]] (susumeru)}}
+* {{ja-readings|on=[[よう]] (yō)|kun=[[すすめる]] (susumeru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惥]]
