--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -36,6 +36,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 {{trans-top|prison cell}}
 * Finnish: {{t-|fi|selli}}, {{t-|fi|häkki}}
 {{trans-mid}}
+* Spanish: {{t|es|celda|f}}
 {{trans-bottom}}
 
 {{trans-top|(baseball) bullpen}}
