--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -29,12 +29,12 @@ From Old English [[ceosan|ċēosan]].
 
 ====Translations====
 {{trans-top|to elect}}
-* {{trreq|Arabic}}
+* Arabic: {{Arab|[[اختار]]}} (ixtāra)
 * {{trreq|Armenian}}
 * {{trreq|Basque}}
 * Bosnian: {{t|bs|izabrati}}, {{t|bs|odabrati}}
 * [[Catalan]]: [[escollir]], [[elegir]], [[triar]]
-* Chinese: [[選舉]], [[选举]] (xuán jǔ)
+* Chinese: [[選舉]], [[选举]] (xuǎnjǔ)
 * Croatian: {{t|hr|izabrati}}, {{t|hr|odabrati}}
 * Danish: [[vælge]], [[kåre]]
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|verkiezen}}
@@ -42,19 +42,19 @@ From Old English [[ceosan|ċēosan]].
 * {{trreq|Estonian}}
 * Finnish: {{t+|fi|valita}}
 * French: {{t+|fr|choisir}}
-* {{trreq|Georgian}}
+* Georgian: [[ამორჩევა]] (amorčeva)
 * German: {{t+|de|wählen}}
 * Greek: {{t+|el|εκλέγω|sc=Grek}} (eklégo)
 * {{trreq|Hebrew}}
 * {{trreq|Hindi}}
 * Hungarian: {{t|hu|megválaszt}}
-{{trans-mid}}
 * {{trreq|Icelandic}}
 * {{trreq|Indonesian}}
+{{trans-mid}}
 * Italian: {{t+|it|eleggere}}
-* {{trreq|Japanese}}
-* {{trreq|Korean}}
-* {{trreq|Latin}}
+* Japanese: [[選ぶ]] (えらぶ, erabu)
+* Korean: [[고르다]] (goreuda)
+* Latin: [[eligo|ēligo]], [[diligo|dīligo]]
 * {{trreq|Latvian}}
 * {{trreq|Lithuanian}}
 * {{trreq|Maltese}}
@@ -63,25 +63,28 @@ From Old English [[ceosan|ċēosan]].
 * Polish: {{t+|pl|wybierać}}, {{t-|pl|wybrać}}
 * Portuguese: {{t-|pt|escolher}}
 * Romanian: {{t-|ro|alege}}
-* {{trreq|Russian}}
+* Russian: {{t+|ru|выбирать|tr=výbirat’}}
 * Serbian: {{t|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: [[izvoliti]]
 * Spanish: {{t+|es|elegir}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
-* {{trreq|Thai}}
+* Thai: {{Thai|[[เลือก]]}} (lêuak), {{Thai|[[คัดเลือก]]}} (kát lêuak)
 * {{trreq|Turkish}}
+* Yiddish: [[קלײַבן]] (klaybn), [[אויסקלײַבן]] (oysklaybn)
 {{trans-bottom}}
 
 {{trans-top|to pick}}
+* Arabic: {{Arab|[[اختار]]}} (ixtāra)
 * [[Catalan]]: [[elegir]]
-* Chinese: [[選擇]], [[选择]] (xuǎn zé)
+* Chinese: [[選擇]], [[选择]] (xuǎnzé)
 * Bosnian: {{t|bs|izabrati}}, {{t|bs|odabrati}}
 * Croatian: {{t|hr|izabrati}}, {{t|hr|odabrati}}
 * Danish: [[udvælge]], [[vælge]], [[foretrække]]
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|uitkiezen}}
 * Finnish: {{t+|fi|valita}}
 * French: {{t+|fr|choisir}}
+* Georgian: [[ამორჩევა]] (amorčeva)
 * German: {{t-|de|auswählen}}, {{t+|de|wählen}}
 * Greek: {{t+|el|διαλέγω|sc=Grek}} (dialégo)
 * Hebrew: [[לבחור]] (livkhor)
@@ -91,11 +94,13 @@ From Old English [[ceosan|ċēosan]].
 * Maori: {{t-|mi|whiri|xs=Maori}}
 * Portuguese: {{t-|pt|escolher}}
 * Romanian: {{t-|ro|alege}}
+* Russian: {{t+|ru|выбирать|tr=výbirat’}}
 * Serbian: {{t|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: [[izbrati]]
 * Spanish: {{t-|es|escoger}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
+* Thai: {{Thai|[[เลือก]]}} (lêuak), {{Thai|[[คัดเลือก]]}} (kát lêuak)
 {{trans-bottom}}
 
 {{trans-top|to decide to act in a certain way}}
