* before Han ref <垊#3697940>

--- a/en/垊/垊.13069.wikitext
+++ b/en/垊/垊.13069.wikitext
@@ -1,11 +1,11 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土口女心 (GRVP)}}
+
 # {{defn|Han|sort=土05}}
+
 ====References====
-{{Han ref|kx=0227.271|hdz=10435.131|uh=578A|ud=22410}}
-
-
-
+* {{Han ref|kx=0227.271|hdz=10435.131|uh=578A|ud=22410}}
 
 [[fr:垊]]
