* before Han ref, * before ja-readings <偈#3702645>

--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -1,33 +1,53 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人日心女 (OAPV)}}
+
 # brave
 # martial
 # hasty
 # scudding
+
 ====References====
-{{Han ref|kx=0110.040|dkj=00836|dj=0234.010|hdz=10191.010|uh=5048|ud=20552|bh=D455|bd=54357}}
+* {{Han ref|kx=0110.040|dkj=00836|dj=0234.010|hdz=10191.010|uh=5048|ud=20552|bh=D455|bd=54357}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gai2, gai6 git6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けつ]] (ketsu), [[けい]] (kei), [[げ]] (ge)|kun=[[いこう]] (ikou)}}
+* {{ja-readings|on=[[けつ]] (ketsu), [[けい]] (kei), [[げ]] (ge)|kun=[[いこう]] (ikou)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[게]], [[걸]]|rv=ge, geol|mr=ke, kŏl}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[jié]] ([[jie2]])|wg=chi<sup>4</sup>, chieh<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偈]]
