/* Translations */ +de <straight#3704084>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -60,6 +60,7 @@
 * Polish: {{t+|pl|prosty}}
 * Portuguese: {{t+|pt|reto|m}}
 * Russian: {{t+|ru|прямой|tr=pr'amój|sc=Cyrl}}
+* Spanish: {{t|es|recto}}
 * Swedish: {{t+|sv|rak}}
 {{trans-bottom}}
 
@@ -71,6 +72,7 @@
 * Dutch: [[zoals het hoort]]
 * Finnish: [[suora]], [[rehellinen]], [[vilpitön]]
 * French: {{t-|fr|comme il faut}}
+* German: {{t|de|aufrecht}}, {{t|de|aufrichtig}}
 * Hungarian: {{t-|hu|egyenes}}, {{t+|hu|őszinte}}
 {{trans-mid}}
 * Japanese: {{t|ja|sc=Jpan|実直な|tr=jicchoku na}}
@@ -91,6 +93,7 @@
 * Dutch: {{t+|nl|puur}}, {{t-|nl|pure}}
 * Finnish: {{t+|fi|raaka}}, {{t+|fi|laimentamaton}}
 * French: {{t+|fr|pur}}, {{t+|fr|pure}}
+* German: {{t|de|unverdünnt}}
 {{trans-mid}}
 * Japanese: {{t|ja|sc=Jpan|ストレートの|tr=sutorēto no}}
 * Russian: [[чистый]] (čístyj), [[неразбавленный]] (n'erazbávl'ennyj)
