/* Derived terms */ * [[have a stab at]], [[take a stab at]] * [[a stab in the dark]] <stab#3708251>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -20,9 +20,10 @@
 # [[Criticism]].
 
 ====Derived terms====
-* [[have a stab at]]
+* [[have a stab at]], [[take a stab at]]
 * [[stabbing]]<!--adjective, noun-->
 * [[stab vest]]
+* [[a stab in the dark]]
 
 ====Translations====
 {{trans-top|Act of stabbing}}
