* before Han ref, * before ja-readings, rm dup cat [[:Category:zh-cn:Beginning Mandarin|zao3]] <早#3721863>

--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -1,34 +1,53 @@
 ==Translingual==
 {{Han stroke|[[Image:早-order.gif]]}}
+
 ===Etymology===
-Pictograph of sun over the horizon 
+Pictograph of sun over the horizon
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=6040<sub>0</sub>|canj=日十 (AJ)|ids=⿱[[日]][[十]]}}
+
 # early
 # soon
 # morning
+
 ====References====
-{{Han ref|kx=0489.120|dkj=13742|dj=0850.090|hdz=21483.060|uh=65E9|ud=26089|bh=A6AD|bd=42669}}
+* {{Han ref|kx=0489.120|dkj=13742|dj=0850.090|hdz=21483.060|uh=65E9|ud=26089|bh=A6AD|bd=42669}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jou2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
-[[Category:Grade 1 kanji|日02]]
 {{ja-kanji|grade=|rs=日02}}
+
 ====Readings====
-{{ja-readings|on=[[そう]] (sō), [[さつ]] (satsu)|kun=[[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)}}
+* {{ja-readings|on=[[そう]] (sō), [[さつ]] (satsu)|kun=[[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)}}
+
+[[Category:Grade 1 kanji|日02]]
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=조|eumhun=일찍|rv=jo|mr=cho|y=co}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zǎo]] ([[zao3]])|wg=tsao<sup>3</sup>}}
 {{zh-hanzi|[[早]]}}
@@ -48,8 +67,6 @@ Pictograph of sun over the horizon
 
 # {{Beginning Mandarin|lang=zh-tw|skey=日02}} long ago, for a long time
 
-[[Category:zh-cn:Beginning Mandarin|zao3]]
-[[Category:zh-cn:Beginning Mandarin|zao3]]
 [[Category:zh-cn:Beginning Mandarin|zao3]]
 
 [[fr:早]]
