--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -16,7 +16,7 @@ From {{L.}} ''[[vomitare]]''.
 # To [[regurgitate]] the contents of a [[stomach]].
 
 ====Translations====
-{{top}}
+{{trans-top|to regurgitate the contents of a stomach}}
 * Armenian: {{t|hy|հետ տալ|sc=Hayeren|xs=Armenian}}, {{t|hy|փսխել|sc=Hayeren|xs=Armenian}}
 * Czech: {{t-|cs|zvracet}}
 * Dutch: {{t|nl|overgeven}}, {{t|nl|braken]], {{t|nl|kotsen|colloquial}}
@@ -28,8 +28,8 @@ From {{L.}} ''[[vomitare]]''.
 * Greek: {{t|el|εμετός|sc=Grek}}
 * Hebrew: {{t|he|להקיא|sc=Hebr}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
+{{trans-mid}}
 * Japanese: [[吐く]] ([[はく]], haku), [[嘔吐する]] ([[おうとする]], ōtosuru)
-{{mid}}
 * Korean: [[게우다]] (geuda)<!--, [[토하다]] ([[吐]]-, to-hada)-->
 * Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
 * Norwegian: [[kaste opp]]
@@ -40,7 +40,7 @@ From {{L.}} ''[[vomitare]]''.
 * Serbian: {{t|sr|zbljuvati}}, {{t|sr|povratiti}}, {{t-|sr|bljuvati}}, {{t-|sr|povraćati}}
 * Spanish: {{t+|es|vomitar}}, {{t-|es|devolver}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}
-{{bottom}}
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun|-}}
