--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -183,6 +183,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 # {{plural of|curvă|lang=Romanian}} [[whores]]
 
 [[ar:curve]]
+[[de:curve]]
 [[fa:curve]]
 [[fr:curve]]
 [[hy:curve]]
