--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -84,7 +84,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Slovene: [[boriti se]]
 * Spanish: {{t+|es|pelear}}, {{t-|es|luchar}}
 * Swedish: [[strida]], [[slåss]], [[kämpa]]
-* {{trreq|Turkish}}
+* Turkish: [[savaşmak]]
 * {{trreq|Vietnamese}}
 * {{trreq|Welsh}}
 * Yiddish: [[קעמפֿן]] (kemfn)
