* before Han ref <昙#3766345>

--- a/en/昙/昙.16961.wikitext
+++ b/en/昙/昙.16961.wikitext
@@ -1,22 +1,30 @@
 {{see|曇}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日一一戈 (AMMI)}}
+
 # become cloudy, overcast
+
 ====References====
-{{Han ref|kx=0492.121|dkj=13824|hdz=21488.090|uh=6619|ud=26137}}
+* {{Han ref|kx=0492.121|dkj=13824|hdz=21488.090|uh=6619|ud=26137}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=taam4}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=曇|pin=[[tán]] ([[tan2]])|wg=t'an<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昙]]
