--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -49,7 +49,7 @@
 * [[Afrikaans]]: [[brug]]
 * Albanian: {{t-|sq|urë|f|xs=Albanian}}
 * Arabic: {{Arab|[[كوبري]]}} (kúbri)
-* {{trreq|Armenian}}
+* Armenian: [[կամուրջ]]
 * [[Basque]]: [[zubi]]
 * {{trreq|Belarusian}}
 * Bengali: [[পুল]]
@@ -76,7 +76,7 @@
 * [[Gujarati]]: [[પુલ]]
 * Hawaiian: [[uapo]]
 * Hebrew: {{t-|he|גשר|m|tr=gesher|sc=Hebr}}
-* Hindi: [[पुल]]
+* Hindi: [[पुल#Hindi|पुल]]
 * Hungarian: {{t+|hu|híd}}
 * Icelandic: {{t+|is|brú|f}}
 * [[Ido]]: [[ponto]]
@@ -100,8 +100,8 @@
 * [[Malayalam]]: [[പാലം]] (paalam)
 * Maltese: {{t-|mt|pont|m|xs=Maltese}}
 * {{trreq|Maori}}
-* {{trreq|Mongolian}}
-* {{trreq|Nepali}}
+* Mongolian: [[гүүр тавих]] (güür tavih)
+* Nepali: [[पुल#Nepali|पुल]]
 * Norwegian: {{t-|no|bro|m|f}}, {{t-|no|bru|m|f}}
 * [[Occitan]]: [[pònt]]
 * Old English: {{t-|ang|brycg|f|xs=Old English}}
