--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -202,6 +202,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 *[[Kinyarwanda]]: [[amavuta]]
 *Korean: [[버터]] (beoteo)
 *Kurdish: {{KUchar|[[که‌ره‌]]}}
+*Lao: {{Laoo|[[ເບີ]]}} (bəə)
 *Latvian: [[sviests]] {{m}}
 *Lithuanian: [[sviestas]] {{m}}
 *[[Macedonian]]: [[путер]] {{m}}
