* before Han ref, * before ja-readings <偁#3772556>

--- a/en/偁/偁.11087.wikitext
+++ b/en/偁/偁.11087.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2224<sub>7</sub>|canj=人月土月 (OBGB)}}
+
 # state
+
 ====References====
-{{Han ref|kx=0109.200|dkj=00828|dj=0233.090|hdz=10193.060|uh=5041|ud=20545|bh=D457|bd=54359}}
+* {{Han ref|kx=0109.200|dkj=00828|dj=0233.090|hdz=10193.060|uh=5041|ud=20545|bh=D457|bd=54359}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ching1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō)|kun=[[あげる]] (ageru)}}
+* {{ja-readings|on=[[しょう]] (shō)|kun=[[あげる]] (ageru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=칭|rv=ching|mr=ch'ing}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chēng]] ([[cheng1]])|wg=ch'eng<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偁]]
