iwiki +nl <stomach#3779166>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -119,6 +119,7 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 [[kk:stomach]]
 [[ku:stomach]]
 [[hu:stomach]]
+[[nl:stomach]]
 [[ja:stomach]]
 [[pl:stomach]]
 [[pt:stomach]]
