/* English */ Checked fi, added a noun sense <play#3800663>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -13,17 +13,22 @@ Old English ''[[pleġa]]'', ''plæġa''
 ====Noun====
 {{en-noun}}
 
-# Activity for amusement only, especially among the young
+# Activity for amusement only, especially among the young.
+# A [[literary]] composition, intended to be represented by actors impersonating the characters and speaking the dialogue.
 # A theatrical performance featuring [[actor]]s.
 # An individual's performance in a sport.
 # A major move by a business.
 # A geological formation that contains an accumulation or prospect of hydrocarbons or other resources.
-# The amount of [[slackness]] in a drive chain or similar looped item.
-#:* No wonder the fanbelt is slipping: there’s too much '''play''' in it.
+# An area of free movement for a part of a mechanism. such as the amount of [[slackness]] in a drive chain.
+#:''No wonder the fanbelt is slipping: there’s too much '''play''' in it.''
+#:''Too much '''play''' in a steering wheel may be dangerous.''
 # (''turn-based games'') An action carried out when it is one's turn to play.
 
-====Translations====
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
+====Synonyms====
+'''literary composition'''
+* [[drama]]
+
+=====Translations=====
 {{trans-top|playful activity}}
 * Albanian: [[lojë]] {{f}}
 * Arabic: {{t+|ar|لعبة|f|sc=Arab}}
@@ -53,6 +58,11 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
 * Swedish: {{t+|sv|spel}}
+{{trans-bottom}}
+
+{{trans-top|literary composition}}
+* Finnish: {{t|fi|näytelmä}}
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|theatrical performance}}
@@ -96,12 +106,24 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-bottom}}
 
 {{trans-top|major move by a business}}
+* Finnish: {{t|fi|siirto}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|play in steering wheel}}
+{{trans-top|geological formation}}
+* Finnish: {{t|fi|kenttä}}, {{t|fi|esiintymä}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|area of free movement for a part of a mechanism}}
+* Finnish: {{t|fi|välys}}, {{t|fi|klappi}}, {{t|fi|löysä}}
 * Hungarian: [[holtjáték]]
+{{trans-mid}}
 * Spanish: {{t+|es|juego|m}}
+{{trans-bottom}}
+
+# (''turn-based games'') An action carried out when it is one's turn to play.
+* Finnish: {{t|fi|siirto}}, {{t|fi|peli}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -137,7 +159,7 @@ Old English ''[[pleġian]]''
 # {{transitive}} {{ergative}}: To use a device to watch or listen to the indicated recording.
 #:* You can '''play''' the DVD now.
 
-====Translations====
+=====Translations=====
 {{trans-top|act in a manner such that one has fun}}
 * [[Aleut]]: [[mikal]]
 * Arabic: {{Arab|[[لعب]]}} {{IPAchar|(láʕiba)}}
@@ -216,9 +238,10 @@ Old English ''[[pleġian]]''
 {{trans-bottom}}
 
 {{trans-top|deal with a situation in a diplomatic manner}}
+* Finnish: {{t|fi|hoitaa}}
 * Icelandic: {{t-|is|spila}}
-* Polish: {{t+|pl|grać}}
 {{trans-mid}}
+* Polish: {{t+|pl|grać}}
 {{trans-bottom}}
 
 {{trans-top|act in a performance}}
@@ -261,7 +284,7 @@ Old English ''[[pleġian]]''
 * Chinese: [[放]] (fàng)
 * Czech: {{t+|cs|hrát}}
 * Dutch: [[spelen]], [[afspelen]]
-* Finnish: {{t+|fi|toistaa}}
+* Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
 * Hebrew: [[להשמיע]] (l'hāshmiʿā)
 * Icelandic: {{t-|is|spila}}
@@ -272,10 +295,7 @@ Old English ''[[pleġian]]''
 * Swedish: {{t+|sv|spela}}, {{t+|sv|spela upp}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
-{{checktrans}}
-
+{{ttbc-top}}
 * {{ttbc|Arabic}}: (5) {{Arab|[[يعزف]]}} (6), {{Arab|[[يتمرن]]}}
 * {{ttbc|Arabic}}: {{Arab|[[يلعب]]}}
 * {{ttbc|Guaraní}}: [[ñembosarái]]
@@ -283,6 +303,7 @@ Old English ''[[pleġian]]''
 * {{ttbc|Interlingua}}: [[jocar]]
 * {{ttbc|Irish}}: [[súgradh]] (''verbal noun'')
 * {{ttbc|Tupinambá}}: [[nhemosaraîa]]
+{{trans-bottom}}
 
 ===Derived terms===
 {{top2}}
